2015-09-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Preliminary support for anti alias
	setting for path drawing.

2015-08-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (process_char):
	Fix bug that caused F11 keypresses to become F12.
	Patch by Adam Fox <adam.fox@testplant.com>

2015-06-05  Fred Kiefer <FredKiefer@gmx.de>

        * configure.ac: Fix configure for mingw
        * configure: Regenerated
	Patch by Marcian Lytwyn <marcian.lytwyn@advcsi.com>

2015-05-26 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/cairo/CairoGState.m
	  abs -> fabs
	* Source/x11/XGGLContext.m
	  format string fix
	* Headers/x11/XGOpenGL.h
	  glxminorversion is int, not long int

2015-05-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Add support for image interpolation
	setting in context.
	Patch by Josh Freeman <gnustep_lists@twilightedge.com>

2015-05-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (_fillRect:withPattern:): Add support for
	patternPhase.
	Patch by Josh Freeman <gnustep_lists@twilightedge.com>

2015-05-18 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.postamble
	Correctly run config.status again.

2015-05-16  Richard Frith-Macdonald <rfm@gnu.org>

        * Documentation/news.texi:
        * ANNOUNCE:
        * NEWS:
        * README:
        * Version:
	Bugfix release 0.24.1

2015-05-13 Riccardo Mottola <rm@gnu.org>

        * configure.ac
        Copied from base: only warn if compiler is different from the one
	configured in make
        * configure
        regenerated

2015-05-12 Riccardo Mottola <rm@gnu.org>

	* configure.ac
	pick up gnustep make configured CC, CPP, CXX and check they are
	consistent with how make was configured
	* configure
	regenerated

2015-03-31  Germán Arias <germanandre@gmx.es>

	* Source/win32/WIN32Server.m (-windowEventProc:, -process_mouse_event:):
	Start tracking the mouse at the first mouse movement (as suggested in