@@ -1,3 +1,12 @@
+2015-10-03  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/gsc/GSGState.h
+	* Source/gsc/GSContext.m
+	* Source/gsc/GSGState.m
+	* Source/cairo/CairoGState.m
+	Implement per gstate methods for antialias, patternPhase and
+	compositingOperation.
+
 2015-09-20  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/cairo/CairoGState.m: Preliminary support for anti alias
